<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings_UI"
    android:title="@string/settings_UI_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Preference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="dbName"
        android:summary="@string/database_summary"
        android:title="@string/database"
        android:persistent="true"
        android:defaultValue="/sdcard/anymemo/french-body-parts.db"/>

    <ListPreference
        android:title="@string/select_background_text"
        android:summary="@string/select_background_summary"
        android:key="selected_background"
        android:entries="@array/background_entries"
        android:entryValues="@array/background_entries_value" />
</PreferenceScreen>
