<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<Button
        android:id="@+id/preview" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
        android:onClick="openPreview"
        android:text="@string/preview_text"
        android:textSize="24sp"
        android:padding="20dp" />
	<Button
        android:id="@+id/settings" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
        android:onClick="openSettings"
        android:text="@string/settings_text"
        android:textSize="24sp"
        android:padding="20dp" />
	<Button
        android:id="@+id/force" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
        android:onClick="forceClose"
        android:text="@string/force_close_text"
        android:textSize="24sp"
        android:padding="20dp" />
</LinearLayout>

